* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
- Add RockyLinux 8 support

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Tue Jun 08 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.5
- Disabled the TPM 1.2 tests due to upstream ACA issues
- Worked around a bug in the ACA for the tests
- Added java installation to the module since it is a required dependency
- Bumped the puppet and puppetlabs/stdlib supported versions

* Thu Dec 17 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.1.5
- Removed EL6 support

* Thu Jul 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.1.4-0
- update the upper bound of simplib for SIMP 6.5 release

* Mon Mar 02 2020 Jeanne Greulich<jeanne.greulich@onyxpoint.com> - 0.1.3
- Updated tests to use tpm2 simulator package from download.simp-project.
- HIRS tpm provisioner software does not run on EL8 yet.

* Wed Jul 03 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.2
- Updated README.md
- Added REFERENCE.md

* Fri Jun 14 2019 Michael Morrone <michael.morrone@onyxpoint.com> - 0.1.1
- Removed the HIRS package dependency list that was in common.yaml,
  as the HIRS RPM now appropriately specifies its dependencies.
- Removed the softlink in the install manifest, because it is no longer
  needed with the newer HIRS package.
- Updated the upper bound of puppet and stdlib to < 7.0.0
- Updated RPMs for installation and testing
- Updated Travis and GitLab Test matrices

* Fri Mar 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Dec 21 2018 Michael Morrone <michael.morrone@onyxpoint.com> - 0.1.0
- Initial commit.
- Install HIRS Provisioner and check-in with Attestation Certificate Authority.