@@ -1,6 +1,6 @@
 {
   "name": "simp-hirs_provisioner",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "SIMP Team",
   "summary": "Implement Host Integrity at Runtime and Startup Provisioner",
   "license": "Apache-2.0",
@@ -13,15 +13,15 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.11.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/java",
-      "version_requirement": ">= 6.0.0 < 8.0.0"
+      "version_requirement": ">= 6.0.0 < 11.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     }
   ],
   "operatingsystem_support": [
@@ -53,7 +53,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
